k8s/argo-workflows-workspace/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    jali-clarke.external-dns.alpha.kubernetes.io/is-external: "true"
spec:
  tls:
  - hosts:
    - events.argo.jali-clarke.ca
    secretName: jali-clarke-ca
  ingressClassName: external
  rules:
  - host: events.argo.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/github"
        backend:
          service:
            name: github-eventsource-svc
            port:
              number: 12000
